--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "SummaryBot",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Summarizes large bodies of text.",
   "main": "summaryBot.js",
   "directories": {
     "test": "test"
@@ -14,8 +14,8 @@
     "url": "git+https://github.com/CamdenK/SummaryBot.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Camden Ko",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/CamdenK/SummaryBot/issues"
   },
