--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "SummaryBot",
-  "version": "1.0.0",
+  "name": "summarybot",
+  "version": "0.0.2",
   "description": "",
   "main": "summaryBot.js",
   "directories": {
@@ -13,7 +13,7 @@
     "type": "git",
     "url": "git+https://github.com/CamdenK/SummaryBot.git"
   },
-  "keywords": [],
+  "keywords": ["text", "summary", "bot", "textrank"],
   "author": "",
   "license": "ISC",
   "bugs": {
